--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=إدخالات معطلة مكثفة
 disabled-inputs-condensed-with-value=إدخالات معطلة مكثفة مع قيمة
 disabled-inputs-with-value=إدخالات معطلة مع قيمة
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=يؤدي تعطيل "سلة المحذوفات" إلى منع استعادة المحتوى الذي تم نقله إلى "سلة المحذوفات".
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=فك الارتباط
 discard=تجاهل
 discard-change=تجاهل التغيير
@@ -5625,7 +5626,6 @@ due-date=تاريخ الإنتهاء
 due-date-by-sla=تاريخ الاستحقاق حسب SLA
 due-to-inactivity-your-session-has-expired=بسبب عدم النشاط، انتهت صلاحية جلستك. يُرجى حفظ أي بيانات قد تكون أدخلتها قبل تحديث الصفحة.
 due-to-inactivity-your-session-will-expire=بسبب عدم النشاط، ستنتهي صلاحية جلستك في غضون {0}. لتمديد جلستك لمدة {1} دقيقة/دقائق أخرى، يُرجى الضغط على <em>تمديد</em>.‏ {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=تكرار
 duplicate-article-version=إصدار مقالة مكرر
 duplicate-document-version=تكرار إصدار المستند
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=هذا التكوين موروث.
 this-configuration-is-not-saved-yet=لم يتم حفظ هذا التكوين بعد.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=لم يتم حفظ هذا التكوين بعد. القيم المعروضة هي قيم افتراضية.
 this-configuration-is-read-only=هذا التكوين للقراءة فقط.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=محتوى الويب هذا يتضمن صفحة عرض.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=هذا المحتوى انتهت صلاحيته أو أنه ليس لديك صلاحية للوصول إليه.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=هذا الكوبون صالح فقط للأصناف الموجودة في تصنيفات هذه القائمة.
