--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Entrades desactivades condensades
 disabled-inputs-condensed-with-value=Entrades desactivades condensades amb valor
 disabled-inputs-with-value=Entrades desactivades amb valors
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=La desactivació de la paperera de reciclatge impedeix la restauració de contingut que ha estat enviat a la paperera de reciclatge.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Desvincula
 discard=Descarta
 discard-change=Descarta el canvi
@@ -5625,7 +5626,6 @@ due-date=Venciment
 due-date-by-sla=Data de venciment segons l'SLA
 due-to-inactivity-your-session-has-expired=A causa de la inactivitat, la sessió ha caducat. Deseu qualsevol dada que hàgiu introduït abans d'actualitzar la pàgina.
 due-to-inactivity-your-session-will-expire=A causa de la inactivitat, la sessió caducarà d'aquí {0}. Per allargar la sessió {1} minut/s més, premeu el botó <em>Allarga</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplica
 duplicate-article-version=Duplica la versió de l'article
 duplicate-document-version=Duplica la versió del document
@@ -17334,6 +17334,7 @@ this-configuration-is-inherited=Aquesta configuració és heretada.
 this-configuration-is-not-saved-yet=Aquesta configuració encara no està desada.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Aquesta configuració encara no s'ha guardat. Els valors mostrats són els valors per defecte.
 this-configuration-is-read-only=Aquesta configuració és només de lectura.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Aquest contingut web té una pàgina de visualització.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=O bé aquest contingut ha caducat, o bé no teniu els permisos necessaris per accedir-hi.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Aquest cupó només s'aplica als elements que són d'un nivell inferior en aquesta llista de categories delimitada per una coma.
