--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Deaktivierte Eingaben Schmal
 disabled-inputs-condensed-with-value=Deaktivierte Eingaben Schmal mit Wert
 disabled-inputs-with-value=Deaktivierte Eingaben mit Wert
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Das Deaktivieren des Papierkorbs verhindert das Wiederherstellen von Inhalten die in den Papierkorb verschoben wurden.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Zuordnung aufheben
 discard=Verwerfen
 discard-change=Änderung verwerfen
@@ -5625,7 +5626,6 @@ due-date=Fälligkeitsdatum
 due-date-by-sla=Fälligkeitsdatum nach SLA
 due-to-inactivity-your-session-has-expired=Ihre Sitzung ist wegen Inaktivität abgelaufen. Bevor Sie fortfahren, stellen Sie bitte sicher, dass Ihre eingegebenen Daten lokal gespeichert werden.
 due-to-inactivity-your-session-will-expire=Ihre Sitzung wird in {0} wegen Inaktivität ablaufen. Um Ihre Sitzung um {1} Minute(n) zu verlängern, tippen Sie bitte auf die Schaltfläche <em>Verlängern</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplikat
 duplicate-article-version=Duplizierte Artikelversion
 duplicate-document-version=Duplizierte Dokumentversion
@@ -17334,6 +17334,7 @@ this-configuration-is-inherited=Diese Konfiguration wird vererbt.
 this-configuration-is-not-saved-yet=Diese Konfiguration wurde noch nicht gespeichert.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Diese Konfiguration wurde noch nicht gespeichert. Die angezeigten Werte werden standardmäßig erstellt.
 this-configuration-is-read-only=Diese Konfiguration ist schreibgeschützt.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Dieser Web-Inhalt hat eine Anzeigeseite.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Entweder ist dieser Inhalt abgehlaufen oder Ihnen fehlt die Berechtigung um darauf zuzugreifen.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Dieser Gutschein ist nur für Artikel gültig, welche den - in der Liste mit Kommas getrennten - Einträgen untergeordnet sind.
