--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Η απενεργοποίηση του Κάδου Ανακύκλωσης εμποδίζει την επαναφορά περιεχομένου που έχει μετακινηθεί στον Κάδο Ανακύκλωσης. (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Απόρριψη
 discard-change=Απόρριψη αλλαγής (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Ημερομηνία οφειλής
 due-date-by-sla=Ημερομηνία λήξης από την SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Διπλό
 duplicate-article-version=Διπλότυπη έκδοση άρθρου (Automatic Translation)
 duplicate-document-version=Διπλότυπη έκδοση εγγράφου (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Αυτή η ρύθμιση παραμέτρων δεν έχει αποθηκευτεί ακόμα. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Αυτή η ρύθμιση παραμέτρων δεν έχει αποθηκευτεί ακόμα. Οι τιμές που εμφανίζονται είναι οι προεπιλεγμένες. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Αυτό το περιεχόμενο έχει μια σελίδα εμφάνισης. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Αυτό το περιεχόμενο έχει λήξει ή δεν έχετε τα απαραίτητα δικαιώματα πρόσβασης σε αυτό.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Αυτό το κουπόνι ισχύει μόνο για τα είδη που είναι παιδιά αυτού του καταλόγου κατηγοριών που χωρίζονται με κόμμα.
