--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Entrées désactivées condensées
 disabled-inputs-condensed-with-value=Entrées désactivées condensées avec valeur
 disabled-inputs-with-value=Entrées désactivées avec valeur
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Désactiver la corbeille empêche la restauration du contenu qui a été déplacé dans celle-ci.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Dissocier
 discard=Écart
 discard-change=Abandonner la modification
@@ -5625,7 +5626,6 @@ due-date=Date d'échéance
 due-date-by-sla=Date limite par SLA
 due-to-inactivity-your-session-has-expired=Votre session a expiré pour cause d'inactivité. Veuillez enregistrer toute donnée que vous pourriez avoir saisie avant d'actualiser la page.
 due-to-inactivity-your-session-will-expire=Votre session expirera dans {0} pour cause d'inactivité. Pour ajouter {1} minute(s) à la durée de votre session, veuillez appuyer sur le bouton <em>Étendre</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Dupliquer
 duplicate-article-version=Dupliquer la version de l'article
 duplicate-document-version=Dupliquer la version du document
@@ -17334,6 +17334,7 @@ this-configuration-is-inherited=Cette configuration est héritée.
 this-configuration-is-not-saved-yet=Cette configuration n'est pas encore enregistrée.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Cette configuration n'a pas été sauvegardée encore. Les valeurs affichées sont celles par défaut.
 this-configuration-is-read-only=Cette configuration est en lecture seule.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Ce contenu web a une page d'affichage.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Ce contenu a expiré ou vous n'avez pas les permissions requises pour y accéder.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Ce bon s'applique seulement aux articles qui sont des enfants de cette liste délimitée par virgule de catégories.
