--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Kikapcsolt bemenetek sűrítve
 disabled-inputs-condensed-with-value=Kikapcsolt bemenetek sűrítve értékkel
 disabled-inputs-with-value=Kikapcsolt bemenetek értékkel
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=A Lomtár letiltása megakadályozza a már Lomtárba helyezett tartalom visszaállítását.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Társítás törlése
 discard=Elvet
 discard-change=Változtatás elvetése
@@ -5625,7 +5626,6 @@ due-date=Esedékes dátum
 due-date-by-sla=Esedékes SLA szerint
 due-to-inactivity-your-session-has-expired=A munkamenet inaktivitás miatt lejárt. Az oldal frissítése előtt mentsd el az esetleg beírt adatokat.
 due-to-inactivity-your-session-will-expire=A munkamenet inaktivitás miatt lejár {0} múlva. A munkamenet {1} perccel történő meghosszabbításához nyomd meg a <em>Meghosszabbítás</em> gombot. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Másolat
 duplicate-article-version=Megkettőzött cikkverzió
 duplicate-document-version=Megkettőzött dokumentumverzió
@@ -17335,6 +17335,7 @@ this-configuration-is-inherited=Ez a konfiguráció örökölt.
 this-configuration-is-not-saved-yet=Ez a konfiguráció még nincs elmentve.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Ez a konfiguráció még nem lett elmentve. A megjelenített értékek, az alap értékek.
 this-configuration-is-read-only=Ez a konfiguráció csak olvasható.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=A webes tartalomhoz megjelenítő oldal tartozik.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Ez a tartalom lejárt, vagy nincs megfelelő hozzáférési jogosultság.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Ez a kupon csak azokra a tételekre vonatkozik, amelyek a vesszővel elválasztott kategórialista alá tartoznak.
