--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Menonaktifkan Keranjang Sampah mencegah pemulihan konten yang telah dipindahkan ke Keranjang Sampah. (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Membuang
 discard-change=Buang Perubahan (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Tanggal Jatuh Tempo
 due-date-by-sla=Tanggal Jatuh Tempo oleh SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplikat (Automatic Translation)
 duplicate-article-version=Versi Artikel Duplikat (Automatic Translation)
 duplicate-document-version=Versi Dokumen Duplikat (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Konfigurasi ini belum disimpan. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Konfigurasi ini belum disimpan. Nilai yang ditampilkan adalah default. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Konten ini memiliki halaman tampilan. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Konten ini telah kedaluwarsa atau Anda tidak memiliki izin yang diperlukan untuk mengaksesnya.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Kupon ini hanya berlaku untuk item yang merupakan sub dari daftar kategori yang dibatasi koma..
