--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -5302,6 +5302,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Disabilitando il cestino inibirà il recupero di contenuti che sono stati spostati nel cestino.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Scarta
 discard-change=Ignora modifica (Automatic Translation)
@@ -5624,7 +5625,6 @@ due-date=Data di Scadenza
 due-date-by-sla=Data di scadenza per contratto di servizio (Automatic Translation)
 due-to-inactivity-your-session-has-expired=A causa di inattività, la sessione è scaduta. Prima di aggiornare la pagina si prega di salvare tutti i dati immessi.
 due-to-inactivity-your-session-will-expire=A causa di inattività, la sessione scadrà tra {0} minuti. Per estendere la sessione di altri {1} minuto/i, premere il tasto <em>Estendi</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplica
 duplicate-article-version=Versione duplicata dell'articolo (Automatic Translation)
 duplicate-document-version=Versione documento duplicata (Automatic Translation)
@@ -17333,6 +17333,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Questa configurazione non è ancora stata salvata. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Questa configurazione non è ancora stata salvata. I valori visualizzati sono quelli predefiniti.
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Questo contenuto ha una pagina di visualizzazione. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Il contenuto è scaduto o non hai i requisiti per accedervi.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Questo buono si applica soltanto agli elementi che sono figli di questa lista di categorie delimitate da virgola.
