--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=無効な入力 (余白なし)
 disabled-inputs-condensed-with-value=無効な入力 (余白なし、値あり)
 disabled-inputs-with-value=無効な入力 (値あり)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=ゴミ箱を無効にすると、ゴミ箱に移動されたコンテンツが復元されなくなります
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=関連付け解除
 discard=破棄
 discard-change=変更を破棄
@@ -5625,7 +5626,6 @@ due-date=期限
 due-date-by-sla=SLA別の期日
 due-to-inactivity-your-session-has-expired=一定期間操作されなかったため、セッションが無効になりました。ページをリフレッシュする前に、入力していた値を保存してください。
 due-to-inactivity-your-session-will-expire=一定期間操作されなかったため、{0}でセッションが無効になります。もう{1}分セッションを延長するには、<em>延長</em> ボタンを押下してください。{2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=コピーする
 duplicate-article-version=重複している記事バージョン
 duplicate-document-version=重複しているドキュメントバージョン
@@ -17334,6 +17334,7 @@ this-configuration-is-inherited=この設定は継承されています。
 this-configuration-is-not-saved-yet=この設定はまだ保存されていません。
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=この設定はまだ保存されていません。現在デフォルトの設定値が表示されています。
 this-configuration-is-read-only=この設定は読み取り専用です。
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=このWebコンテンツには表示ページがありません。
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=このコンテンツは期限が切れているか、アクセスに必要な権限を割り当てられていません
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=このクーポンはカンマ区切りのカテゴリに含まれる商品のみに適用できます。
