--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Uitgeschakelde invoer versmald
 disabled-inputs-condensed-with-value=Uitgeschakelde invoer versmald met waarde
 disabled-inputs-with-value=Uitgeschakelde invoer met waarde
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Uitschakelen van de prullenbak zorgt ervoor dat content die naar de prullenbak is verplaatst niet hersteld kan worden.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Ontkoppelen
 discard=Verwijderen
 discard-change=Wijziging annuleren
@@ -5625,7 +5626,6 @@ due-date=Vervaldatum
 due-date-by-sla=Vervaldatum volgens de SLA
 due-to-inactivity-your-session-has-expired=Uw sessie is verlopen door inactiviteit. Sla eventueel ingevoerde gegevens op voordat u de pagina opnieuw laadt.
 due-to-inactivity-your-session-will-expire=Uw sessie zal verlopen door inactiviteit in {0}. Druk op de knop <em>Verlengen</em> om uw sessie nog {1} minute(n) te verlengen. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicaat
 duplicate-article-version=Dubbele artikelversie
 duplicate-document-version=Documentversie dupliceren
@@ -17335,6 +17335,7 @@ this-configuration-is-inherited=Deze configuratie is overgenomen.
 this-configuration-is-not-saved-yet=Deze configuratie is nog niet opgeslagen.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=De configuratie is nog niet opgeslagen. De getoonde waarden zijn de standaardwaarden.
 this-configuration-is-read-only=Deze configuratie is alleen lezen.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Deze webinhoud heeft een weergavepagina.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Deze content is verlopen of u hebt niet de vereiste rechten voor toegang.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Deze kortingsbon is alleen geldig voor artikelen die behoren tot een van de volgende categorieën.
