--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Entradas desabilitadas condensadas
 disabled-inputs-condensed-with-value=Entradas desabilitadas condensadas com valor
 disabled-inputs-with-value=Entradas desabilitadas com valor
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Desabilitar a Lixeira impede a recuperação de conteúdo que foi movido para a Lixeira.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Desassociar
 discard=Descartar
 discard-change=Descartar alteração
@@ -5625,7 +5626,6 @@ due-date=Prazo
 due-date-by-sla=Data de validade por SLA
 due-to-inactivity-your-session-has-expired=Devido a inatividade, sua sessão expirou. Por favor, salve quaisquer dados que você tenha inserido antes de atualizar a página.
 due-to-inactivity-your-session-will-expire=Devido a inatividade, sua sessão expirará em {0}. Para estender sua sessão por mais {1} minuto(s), por favor, pressione o botão <em>Estender</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicar
 duplicate-article-version=Duplicar Versão do Artigo
 duplicate-document-version=Duplicar versão de documento
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=Esta configuração é herdade.
 this-configuration-is-not-saved-yet=Esta configuração ainda não foi salva.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Esta configuração ainda não foi salva. Os valores mostrados são os valores padrão.
 this-configuration-is-read-only=Esta configuração é apenas para leitura.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Este conteúdo web possui uma página de exibição.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Este conteúdo expirou ou você não tem as permissões exigidas para acessá-lo.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Este cupom aplica-se somente aos itens que são filhos desta lista de categorias delimitada por vírgula.
