--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Desabilitar a Reciclagem impede a recuperação de conteúdo que foi movido para a Reciclagem.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Descartar
 discard-change=Mudança de descarte (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Prazo
 due-date-by-sla=Data de vencimento por SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicado
 duplicate-article-version=Versão duplicada do artigo (Automatic Translation)
 duplicate-document-version=Versão duplicada do documento (Automatic Translation)
@@ -17334,6 +17334,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Esta configuração ainda não está salva. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Esta configuração ainda não foi salva. Os valores apresentados são os por omissão.
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Este conteúdo tem uma página de exibição. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Este conteúdo expirou ou não tem as permissões necessárias para aceder-lhe.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Este cupão aplica-se apenas aos itens que são filhos desta lista de categorias, delimitada por vírgula.
