--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Dezactivarea Coșului de reciclare împiedică restaurarea conținutului care a fost mutat în Coșul de reciclare. (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Șterge
 discard-change=Renunțare la modificare (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Dată Limită
 due-date-by-sla=Data scadenței de către SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Din cauza inactivitatii sesiunea a expirat. Va rugam sa salvati orice date care s-au introdus inainte de a relua sesiunea.
 due-to-inactivity-your-session-will-expire=Avertizare! Din cauza inactivității, sesiunea va expira în {0}. Pentru a prelungi sesiunea pentru încă {1} de minute vă rugăm să apăsați butonul <em>Extinde</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicat (Automatic Translation)
 duplicate-article-version=Versiune articol dublată (Automatic Translation)
 duplicate-document-version=Versiune document dublată (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Această configurație nu este salvată încă. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Această configurație nu este salvată încă. Valorile afișate sunt implicite. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Acest conținut are o pagină de afișare. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Acest continut a expirat sau nu aveti permisiunile necesare pentru a il accesa.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Acest cupon apare numai la elementele care sunt copii a listei de categorii delimitate de virgula.
