--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Zakázanie odpadkového koša zabráni obnoveniu obsahu, ktorý bol presunutý od smetí.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Zahodiť
 discard-change=Zahodiť zmenu (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Dátum "do"
 due-date-by-sla=Dátum splatnosti podľa SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplikát
 duplicate-article-version=Duplicitná verzia článku (Automatic Translation)
 duplicate-document-version=Duplikovať verziu dokumentu (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Táto konfigurácia ešte nie je uložená. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Táto konfigurácia ešte nie je uložená. Zobrazené hodnoty sú predvolené. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Tento obsah má zobrazenú stránku. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Tomuto obsahu vypršala platnosť alebo nemáte potrebné oprávnenia.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Kupón je aplikovateľný len na položky, ktoré su potomkami tohto čiarkami oddeleného zoznamu kategórií.
