--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Inaktiverade inmatningar kondenserade
 disabled-inputs-condensed-with-value=Inaktiverade inmatningar kondenserade med värde
 disabled-inputs-with-value=Inaktiverade inmatningar med värde
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Om du inaktiverar papperskorgen kan du inte återställa innehåll som flyttats till papperskorgen.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Ta bort associering
 discard=Förkasta
 discard-change=Ignorera ändring
@@ -5625,7 +5626,6 @@ due-date=Förfallodatum
 due-date-by-sla=Förfallodatum för SLA
 due-to-inactivity-your-session-has-expired=Din session har slutat gälla på grund av inaktivitet. Spara data som du kan ha angett innan du uppdaterar sidan.
 due-to-inactivity-your-session-will-expire=På grund av inaktivitet kommer din session att sluta gälla om {0}. Om du vill förlänga din session med {1} minut/minuter trycker du på knappen <em>Förläng</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicera
 duplicate-article-version=Duplicera artikelversion
 duplicate-document-version=Dubblettdokumentversion
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=Den här konfiguration är ärvd.
 this-configuration-is-not-saved-yet=Den här konfigurationen har inte sparats än.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Konfigurationen har inte sparats ännu. De värden som visas är standardvärden.
 this-configuration-is-read-only=Den här konfigurationen är skrivskyddad.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Webbinnehållet har en visningssida.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Innehållet har slutat gälla eller du saknar behörighet att få tillgång till det.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Denna kupong kan användas till varor som finns i följande kategorier.
