--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=மறுசுழற்சிக் முடக்குகிறது மறுசுழற்சிக் கூடைக்கு நகர்த்த உள்ளடக்கத்தை மீண்டும் தடுக்கிறது.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=நிராகரி
 discard-change=Discard Change (Automatic Copy)
@@ -5625,7 +5626,6 @@ due-date=கடைசி நாள்
 due-date-by-sla=Due Date by SLA (Automatic Copy)
 due-to-inactivity-your-session-has-expired=செயல்பாடின்மை உங்கள் session காலாவதியாகிவிட்டது. Page Refresh செய்வதற்கு முன்பு நீங்கள் உள்ளிட்ட தரவு சேமிக்க.
 due-to-inactivity-your-session-will-expire=செயல்பாடின்மை காரணமாக உங்கள் session {0} ல் காலாவதியாகிவிடும். உங்கள் session நீட்டிக்க மற்றொரு {1} நிமிடம் (கள்), தயவுசெய்து <em>எக்ஸ்டென்ட்</em> பட்டனை அழுத்துதல். {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=நகல்
 duplicate-article-version=Duplicate Article Version (Automatic Copy)
 duplicate-document-version=Duplicate Document Version (Automatic Copy)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=This configuration is not saved yet. (Automatic Copy)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=This configuration is not saved yet. The values shown are the default. (Automatic Copy)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=This content has a display page. (Automatic Copy)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=இந்த content காலாவதியானது அல்லது அதை அணுகுவதற்கு தேவையான அனுமதிகள் உங்களிடம் இல்லை.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=This coupon only applies to items that are children of this comma delimited list of categories. (Automatic Copy)
