--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=ปิดใช้งาน Inputs Condensed
 disabled-inputs-condensed-with-value=ปิดใช้งาน Inputs Condensed With Value
 disabled-inputs-with-value=ปิดใช้งานอินพุตที่มีแวลู
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=ปิดการใช้ถังขยะเพื่อป้องกันการกู้คืนคอนเทนต์ที่ถูกย้ายไปที่ถังขยะ
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=ยกเลิกการเชื่อมโยง
 discard=ยกเลิก
 discard-change=ยกเลิกการเปลี่ยนแปลง
@@ -5625,7 +5626,6 @@ due-date=วันครบกำหนด
 due-date-by-sla=วันที่ครบกำหนดโดย SLA
 due-to-inactivity-your-session-has-expired=เนื่องจากไม่มีการใช้งาน เซสชันจึงหมดอายุแล้ว ก่อนที่จะดำเนินการต่อ ตรวจสอบให้แน่ใจว่าข้อมูลที่ป้อนได้รับการบันทึกไว้ในเครื่อง
 due-to-inactivity-your-session-will-expire=เนื่องจากไม่มีการใช้งาน เซสชันจะหมดอายุใน {0} หากต้องการขยายเซสชันอีก {1} นาที โปรดกดปุ่ม <em>ขยาย</em> {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=ซ้ำ
 duplicate-article-version=เวอร์ชันที่ซ้ำกัน
 duplicate-document-version=เวอร์ชันเอกสารที่ซ้ำ
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=การตั้งค่านี้ได้
 this-configuration-is-not-saved-yet=การตั้งค่ายังไม่ถูกบันทึก
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=การกำหนดค่านี้ยังไม่ถูกบันทึก ค่าที่แสดงเป็นค่าเริ่มต้น
 this-configuration-is-read-only=การตั้งค่านี้เป็นแบบอ่านอย่างเดียว
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=คอนเทนต์นี้มีหน้าแสดงผล
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=เนื้อหานี้หมดอายุหรือคุณไม่มีสิทธิ์ที่จำเป็นในการเข้าถึง
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=คูปองนี้ใช้ได้เฉพาะรายการที่เป็นลูกของรายการหมวดหมู่ที่คั่นด้วยคอมม่านี้
