--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=紧缩的禁用输入
 disabled-inputs-condensed-with-value=紧缩的禁用输入（带有值）
 disabled-inputs-with-value=带有值的禁用输入
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=关闭回收站将会防止恢复已经被放入回收站的内容。
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=解除关联
 discard=舍弃
 discard-change=放弃变更
@@ -5625,7 +5626,6 @@ due-date=截止日期
 due-date-by-sla=截止日期（按服务水平协议）
 due-to-inactivity-your-session-has-expired=由于不活动，您的会话已经过期。请在刷新页面之前保存您输入的任何数据。
 due-to-inactivity-your-session-will-expire=由于不活动，您的会话将在{0} 后过期。要延长会话另一个{1} 分钟，请按下<em> 扩展</em>按钮。{2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=复制
 duplicate-article-version=复制文章版本
 duplicate-document-version=文档版本重复
@@ -17334,6 +17334,7 @@ this-configuration-is-inherited=此配置已继承。
 this-configuration-is-not-saved-yet=尚未保存此设置。
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=此配置尚未保存。当前显示为默认值。
 this-configuration-is-read-only=此配置为只读配置。
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=此 Web 内容具有显示页。
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=此内容已过期或您没有访问权限。
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=这张优惠券只适用于以逗号分隔的类别列表的下级项目。
