--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=停用垃圾桶避免已經被搬到垃圾桶的內容被回復。
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=放棄
 discard-change=丟棄變更
@@ -5625,7 +5626,6 @@ due-date=到期日期
 due-date-by-sla=截止日期 (按 SLA)
 due-to-inactivity-your-session-has-expired=由於不活躍，您的 session 已過期。 重新整理頁面之前，請保存您可能輸入的所有資料。
 due-to-inactivity-your-session-will-expire=由於不活躍，您的 session 將在 {0} 中過期。 要延長 session 另外 {1} 分鐘，請按<em>延長</em>按鈕。 {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=重複
 duplicate-article-version=複製文章版本
 duplicate-document-version=重複的文件版本
@@ -17333,6 +17333,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=尚未儲存此配置。
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=此配置尚未儲存，目前顯示為預設值。
 this-configuration-is-read-only=此配置為唯讀
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=此內容有顯示頁。
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=這個內容已經到期或是您沒有必須的權限存取它。
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=這張優惠券只適用於類別的逗號區隔列表子項目的項目。
