--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value
 disabled-inputs-with-value=Disabled Inputs With Value
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Disabling the Recycle Bin prevents the restoring of content that has been moved to the Recycle Bin.
+disappear-after-5-secs=DisappearsAfter5Secs
 disassociate=Disassociate
 discard=Discard
 discard-change=Discard Change
@@ -5625,7 +5626,6 @@ due-date=Due Date
 due-date-by-sla=Due Date by SLA
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally.
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed.
 duplicate=Duplicate
 duplicate-article-version=Duplicate Article Version
 duplicate-document-version=Duplicate Document Version
@@ -17338,6 +17338,7 @@ this-configuration-is-inherited=This configuration is inherited.
 this-configuration-is-not-saved-yet=This configuration is not saved yet.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=This configuration is not saved yet. The values shown are the default.
 this-configuration-is-read-only=This configuration is read only.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions.
 this-content-has-a-display-page=This content has a display page.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=This content has expired or you do not have the required permissions to access it.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=This coupon only applies to items that are children of this comma delimited list of categories.
