--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Entradas deshabilitadas condensadas
 disabled-inputs-condensed-with-value=Entradas deshabilitadas condensadas con valor
 disabled-inputs-with-value=Entradas deshabilitadas con valor
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Desactivar la papelera de reciclaje evita restaurar contenido que se ha movido a la Papelera de reciclaje.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Desvincular
 discard=Descartar
 discard-change=Descartar cambio
@@ -5625,7 +5626,6 @@ due-date=Fecha límite
 due-date-by-sla=Fecha de vencimiento por SLA
 due-to-inactivity-your-session-has-expired=La sesión expiró por inactividad. Guarde los datos que introdujo antes de actualizar la página.
 due-to-inactivity-your-session-will-expire=La sesión expirará en {0} por inactividad. Para prolongar la sesión otros {1} minuto(s), presione el botón <em>Extender</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicar
 duplicate-article-version=Duplicar versión del artículo
 duplicate-document-version=Duplicar versión del documento
@@ -17334,6 +17334,7 @@ this-configuration-is-inherited=Esta configuración es heredada.
 this-configuration-is-not-saved-yet=Esta configuración aún no se ha guardado.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Esta configuración todavía no ha sido guardada. Los valores que se muestran son los valores por defecto.
 this-configuration-is-read-only=Esta configuración es de solo lectura.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Este contenido web tiene una página de visualización.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Este contenido ha expirado o usted no tiene los permisos requeridos para acceder.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Este cupón se aplica solamente a los artículos que pertenecen a alguna de las siguientes categorías:
