--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=غیر فعال کردن سطل بازیافت مانع از بازگرداندن محتوایی است که به سطل بازیافت منتقل شده.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=حذف
 discard-change=تغییر را دور بیندازید (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=تاريخ تحويل
 due-date-by-sla=موعد مقرر توسط SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=به دلیل عدم فعالیت ، جلسه شما منقضی شده است. لطفاً قبل از رفرش ، صفحه را ذخیره کنید.
 due-to-inactivity-your-session-will-expire=بدلیل عدم فعالیت، کاربری شما تا {0} ثانیه دیگر از سایت خارج خواهد شد. برای افزایش زمان نشست فعلی برای {1} دقیقه دیگر، لطفا دکمه <em>تمدید</em> را کلیک نمایید. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=تکراری
 duplicate-article-version=نسخه مقاله تکراری (Automatic Translation)
 duplicate-document-version=نسخه سند تکراری (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=این پیکربندی هنوز ذخیره نشده است. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=تنظیمات هنوز ذخیره نشده است. مقادیر نشان داده شده پیش‌فرض هستند.
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=این محتوا یک صفحه نمایش دارد.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=این محتوا منقضی شده است و یا شما مجوز لازم برای دسترسی به آن را ندارید.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=این کوپن فقط مربوط به محصولات این طبقه‌بندی‌ها می‌شود، طبقه‌بندی‌ها توسط کاما از یکدیگر جدا می شوند
