--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Käytöstä poistetut syötteet tiivistetty
 disabled-inputs-condensed-with-value=Käytöstä poistetut syötteet tiivistetty arvollinen
 disabled-inputs-with-value=Käytöstä poistetut syötteet arvollinen
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Roskakorin kytkeminen pois estää sisällön palautuksen, mikä on siirretty roskakoriin.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Poista yhdistäminen
 discard=Hylkää
 discard-change=Hylkää Muutos
@@ -5625,7 +5626,6 @@ due-date=Eräpäivämäärä
 due-date-by-sla=SLA:n Eräpäivä
 due-to-inactivity-your-session-has-expired=Istuntosi on vanhentunut toimettomuuden vuoksi. Tallenna mahdollisesti syöttämäsi tiedot ennen sivun päivittämistä.
 due-to-inactivity-your-session-will-expire=Toimettomuuden vuoksi istuntosi vanhenee {0}. Jatkaaksesi istuntoasi vielä {1} minuutti(a), paina <em>Laajenna</em>-painiketta. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Kaksoiskappale
 duplicate-article-version=Artikkeliversion Kaksoiskappale
 duplicate-document-version=Asiakirjaversion Kaksoiskappale
@@ -17330,6 +17330,7 @@ this-configuration-is-inherited=Tämä määritys on peritty.
 this-configuration-is-not-saved-yet=Näitä asetuksia ei ole vielä tallennettu.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Tätä asetusta ei ole vielä tallennettu. Näytetyt arvot ovat vakiot.
 this-configuration-is-read-only=Tämä määritys on vain luettava.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Tällä web-sisällöllä on näyttösivu.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Sisältö on joko vanhentunut tai sinulla ei ole riittäviä käyttöoikeuksia sen tarkastelemiseen.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Tämä kuponki käy vain tuotteille jotka ovat seuraavan kategorialistan alaisia.
