--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=रीसायकल बिन को अक्षम करना उस सामग्री को बहाल करने से रोकता है जिसे रीसायकल बिन में ले जाया गया है। (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=रद्द करें
 discard-change=Discard Change
@@ -5625,7 +5626,6 @@ due-date=अन्तिम तिथि
 due-date-by-sla=एसएलए द्वारा नियत तिथि (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=हूबहू नक़ल (Automatic Translation)
 duplicate-article-version=डुप्लीकेट लेख संस्करण (Automatic Translation)
 duplicate-document-version=डुप्लीकेट दस्तावेज़ संस्करण (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=यह विन्यास अभी तक सहेजा नहीं गया है। (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=यह विन्यास अभी तक सहेजा नहीं गया है। दिखाए गए मूल्य डिफ़ॉल्ट हैं। (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=इस कंटेंट में डिस्प्ले पेज है। (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=यह सामग्री समाप्त हो गई है या आपके पास इसे एक्सेस करने के लिए आवश्यक अनुमतियां नहीं हैं। (Automatic Translation)
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=यह कूपन केवल उन वस्तुओं पर लागू होता है जो श्रेणियों की इस अल्पविराम सीमित सूची के बच्चे हैं। (Automatic Translation)
