--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=ביטול סל המחזור מונע שחזור של תוכן שהועבר לסל המחזור.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=מחק
 discard-change=בטל שינוי (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=תאריך יעד
 due-date-by-sla=תאריך יעד לפי SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=עקב חוסר פעילות, ההפעלה שלך פגה. נא לשמור את כל הנתונים שייתכן והזנת לפני רענון הדף.
 due-to-inactivity-your-session-will-expire=עקב חוסר פעילות, ההפעלה שלך תפוג ב-{0}. כדי להרחיב את הפעלה שלך בעוד {1} דקות, אנא לחץ על הכפתור<em>הרחב</em>. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=העתק
 duplicate-article-version=שכפול גירסת מאמר (Automatic Translation)
 duplicate-document-version=שכפול גירסת מסמך (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=תצורה זו עדיין לא נשמרה. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=תצורה זו לא נשמרה עדיין. הערכים המוצגים הם ערכי ברירת המחדל.
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=תוכן זה כולל דף תצוגה. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=פג תוקף תוכן זה, או שאין לך את ההרשאות המתאימות לגשת אליו.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=תלוש זה תקף לפריטים שהם בנים של רשימת הקטגוריות המופרדת על ידי פסיקים.
