--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=비활성 입력 요약
 disabled-inputs-condensed-with-value=비활성 입력 요약 값 있음
 disabled-inputs-with-value=비활성 입력 값 있음
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=휴지통을 비활성하면 휴지통으로 이동된 컨텐츠를 복원하는 것을 막습니다.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=연결 해제
 discard=버리기
 discard-change=변경 취소
@@ -5625,7 +5626,6 @@ due-date=만기가 되는 날짜
 due-date-by-sla=SLA별 기한
 due-to-inactivity-your-session-has-expired=활동이 없어 세션이 만료되었습니다. 계속하기 전에 입력한 데이터가 로컬에 저장되었는지 확인하십시오.
 due-to-inactivity-your-session-will-expire=비활성 상태로 인해 세션이 {0} 후에 만료됩니다. 세션을 {1}분 더 연장하려면 <em>연장</em> 버튼을 누르십시오. {2}
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=복제
 duplicate-article-version=문서 버전 복제
 duplicate-document-version=중복 문서 버전
@@ -17331,6 +17331,7 @@ this-configuration-is-inherited=이 구성은 상속됩니다.
 this-configuration-is-not-saved-yet=이 구성은 아직 저장되지 않았습니다.
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=이 구성은 아직 저장되지 않았습니다. 표시된 값은 기본값입니다.
 this-configuration-is-read-only=이 구성은 읽기 전용입니다.
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=이 콘텐츠는 표시 페이지가 가지고 있습니다.
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=이 콘텐츠는 만료되었거나 액세스하는 데 필요한 권한이 없습니다.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=이 쿠폰은 종류의 이 쉼표에 의하여 한계를 정하는 명부의 아이들 이는 품목에 단 적용한다.
