--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Menyahdayakan Tong Kitar Semula menghalang pemulihan kandungan yang telah dipindahkan ke Tong Kitar Semula. (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Buang (Automatic Translation)
 discard-change=Buang Perubahan (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Tarikh Habis Tempoh (Automatic Translation)
 due-date-by-sla=Tarikh Akhir oleh SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Pendua (Automatic Translation)
 duplicate-article-version=Versi Artikel Pendua (Automatic Translation)
 duplicate-document-version=Versi Dokumen Pendua (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Konfigurasi ini belum disimpan lagi. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Konfigurasi ini belum disimpan lagi. Nilai yang ditunjukkan adalah lalai. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Kandungan ini mempunyai halaman paparan. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Kandungan ini telah luput atau anda tidak mempunyai keizinan yang diperlukan untuk mengaksesnya. (Automatic Translation)
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Kupon ini hanya terpakai kepada item yang meriah adalah kanak-kanak senarai kategori yang disengajakan koma ini. (Automatic Translation)
