--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Disabling the Recycle Bin prevents the restoring of content that has been moved to the Recycle Bin. (Automatic Copy)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Verwijderen
 discard-change=Discard Change (Automatic Copy)
@@ -5625,7 +5626,6 @@ due-date=Vervaldatum
 due-date-by-sla=Due Date by SLA (Automatic Copy)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicaat
 duplicate-article-version=Duplicate Article Version (Automatic Copy)
 duplicate-document-version=Duplicate Document Version (Automatic Copy)
@@ -17335,6 +17335,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=This configuration is not saved yet. (Automatic Copy)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=This configuration is not saved yet. The values shown are the default. (Automatic Copy)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=This content has a display page. (Automatic Copy)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Deze inhoud is vervallen of je beschikt niet over nodige permissies om hem te bekijken.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Deze kortingsbon is slechts van toepassing op artikelen die kinderen zijn van deze kommagescheiden lijst van categorieën.
