--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Če onemogočite koš, preprečite obnavljanje vsebine, ki je bila premaknjena v koš. (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Odstrani
 discard-change=Zavrzi spremembo (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Datum do
 due-date-by-sla=Datum zapadlosti po sla (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Podvojiti (Automatic Translation)
 duplicate-article-version=Podvoji različico članka (Automatic Translation)
 duplicate-document-version=Podvoji različico dokumenta (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Ta konfiguracija še ni shranjena. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Ta konfiguracija še ni shranjena. Prikazane vrednosti so privzete. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Ta vsebina ima prikazno stran. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Ta vsebina je potekla ali pa nimate zahtevanih dovoljenj za dostop do tega. (Automatic Translation)
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Ta kupon velja le za izdelke, ki so podrejeni seznamu kategorij (zapisi ločeni z vejico).
