--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Geri Dönüşüm Kutusu'nu devre dışı bırakma, Geri Dönüşüm Kutusu'na taşınan içeriğin geri yüklenmesini engeller. (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Kurtul
 discard-change=Değiştir'i At (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Bitiş Tarihi
 due-date-by-sla=SLA'ya Göre Son Tarih (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Yine -lenen (Automatic Translation)
 duplicate-article-version=Yinelenen Makale Sürümü (Automatic Translation)
 duplicate-document-version=Belge Sürümünü Çoğalt (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Bu yapılandırma henüz kaydedilmedi. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Bu yapılandırma henüz kaydedilmedi. Gösterilen değerler varsayılan değerdir. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Bu içeriğin bir görüntü sayfası vardır. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Bu içeriğin süresi doldu veya bu içeriğe erişmek için gerekli izinlere sahip değilsiniz. (Automatic Translation)
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Bu kupon kategorilerin vigülle ayrılmış listesinin altındaki maddelere uygulannır.
