--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Вимкнення кошика перешкоджає відновленню вмісту, переміщеного до кошика. (Automatic Translation)
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Викинути
 discard-change=Скасувати зміну (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Дата платежу
 due-date-by-sla=Термін за SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Дублювати (Automatic Translation)
 duplicate-article-version=Дублювати версію статті (Automatic Translation)
 duplicate-document-version=Дублювати версію документа (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Цю конфігурацію ще не збережено. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Цю конфігурацію ще не збережено. Показані значення є типовими. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Цей вміст має Медійну сторінку. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Термін дії цього вмісту минув, або ви не маєте необхідних дозволів на доступ до нього. (Automatic Translation)
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Купон використовується тільки до товару, який міститьсяя у цих категоріях. Категорії розділяються комами.
