--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed (Automatic Copy)
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value (Automatic Copy)
 disabled-inputs-with-value=Disabled Inputs With Value (Automatic Copy)
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Vô hiệu hóa Thùng rác sẽ mất khả năng khôi phục các tài sản được xóa tạm tới Thùng rác.
+disappear-after-5-secs=DisappearsAfter5Secs (Automatic Copy)
 disassociate=Disassociate (Automatic Copy)
 discard=Hủy bỏ
 discard-change=Loại bỏ Thay đổi (Automatic Translation)
@@ -5625,7 +5626,6 @@ due-date=Hạn xử lý
 due-date-by-sla=Ngày đến hạn của SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
-due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Trùng lặp
 duplicate-article-version=Phiên bản bài viết trùng lặp (Automatic Translation)
 duplicate-document-version=Phiên bản Tài liệu Trùng lặp (Automatic Translation)
@@ -17332,6 +17332,7 @@ this-configuration-is-inherited=This configuration is inherited. (Automatic Copy
 this-configuration-is-not-saved-yet=Cấu hình này chưa được lưu. (Automatic Translation)
 this-configuration-is-not-saved-yet.-the-values-shown-are-the-default=Cấu hình này chưa được lưu. Các giá trị được hiển thị là mặc định. (Automatic Translation)
 this-configuration-is-read-only=This configuration is read only. (Automatic Copy)
+this-content-cannot-be-displayed-due-to-permission-restrictions=This content cannot be displayed due to permission restrictions. (Automatic Copy)
 this-content-has-a-display-page=Nội dung này có một trang hiển thị. (Automatic Translation)
 this-content-has-expired-or-you-do-not-have-the-required-permissions-to-access-it=Nội dung đã hết hạn hoặc bạn không có đủ quyền truy nhập vào nội dung này.
 this-coupon-only-applies-to-items-that-are-children-of-this-comma-delimited-list-of-categories=Phiếu này chỉ sử dụng cho Hàng hóa của Danh sách phân loại (phân cách bởi dấu phẩy) .
